# toddlerbot

./: README.md  pyproject.toml
docs/hardware/: 01_bill_of_materials.rst
docs/sections/: 01_hardware.rst
toddlerbot/locomotion/: train_mjx.py
